--- a/launch_fp_simulations.ipynb
+++ b/launch_fp_simulations.ipynb
@@ -12,33 +12,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: boto3 in /opt/conda/lib/python3.10/site-packages (1.34.84)\n",
-      "Collecting boto3\n",
-      "  Downloading boto3-1.35.63-py3-none-any.whl.metadata (6.7 kB)\n",
-      "Requirement already satisfied: botocore in /opt/conda/lib/python3.10/site-packages (1.34.84)\n",
-      "Collecting botocore\n",
-      "  Downloading botocore-1.35.63-py3-none-any.whl.metadata (5.7 kB)\n",
+      "Requirement already satisfied: boto3 in /opt/conda/lib/python3.10/site-packages (1.35.69)\n",
+      "Requirement already satisfied: botocore in /opt/conda/lib/python3.10/site-packages (1.35.69)\n",
       "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /opt/conda/lib/python3.10/site-packages (from boto3) (1.0.1)\n",
       "Requirement already satisfied: s3transfer<0.11.0,>=0.10.0 in /opt/conda/lib/python3.10/site-packages (from boto3) (0.10.1)\n",
       "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /opt/conda/lib/python3.10/site-packages (from botocore) (2.9.0)\n",
       "Requirement already satisfied: urllib3!=2.2.0,<3,>=1.25.4 in /opt/conda/lib/python3.10/site-packages (from botocore) (2.2.1)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil<3.0.0,>=2.1->botocore) (1.16.0)\n",
-      "Downloading boto3-1.35.63-py3-none-any.whl (139 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m139.2/139.2 kB\u001b[0m \u001b[31m2.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mta \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading botocore-1.35.63-py3-none-any.whl (12.8 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m45.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m0:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: botocore, boto3\n",
-      "  Attempting uninstall: botocore\n",
-      "    Found existing installation: botocore 1.34.84\n",
-      "    Uninstalling botocore-1.34.84:\n",
-      "      Successfully uninstalled botocore-1.34.84\n",
-      "  Attempting uninstall: boto3\n",
-      "    Found existing installation: boto3 1.34.84\n",
-      "    Uninstalling boto3-1.34.84:\n",
-      "      Successfully uninstalled boto3-1.34.84\n",
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "awscli 1.32.84 requires botocore==1.34.84, but you have botocore 1.35.63 which is incompatible.\u001b[0m\u001b[31m\n",
-      "\u001b[0mSuccessfully installed boto3-1.35.63 botocore-1.35.63\n",
       "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
       "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -429,11 +409,11 @@
    "outputs": [],
    "source": [
     "# Define execution dates in August 2024 corresponding to the month numbers\n",
-    "execution_date = '2024-11-15'\n",
+    "execution_date = '2024-11-26'\n",
     "\n",
     "# Extract unique cabins and hauls from your DataFrame\n",
-    "cabins = ['Economy']\n",
-    "hauls = ['SH']\n",
+    "cabins = ['Business']\n",
+    "hauls = ['LH']\n",
     "\n",
     "# By default\n",
     "region = boto3.Session().region_name\n",
@@ -476,26 +456,32 @@
      "output_type": "stream",
      "text": [
       "WARNING:sagemaker.processing:This function has been deprecated and could break pipeline step caching. We recommend using the run() function directly with pipeline sessionsto access step arguments.\n",
-      "INFO:sagemaker.processing:Uploaded None to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-18-11-52-59-886/source/sourcedir.tar.gz\n",
-      "INFO:sagemaker.processing:runproc.sh uploaded to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-18-11-52-59-886/source/runproc.sh\n",
+      "INFO:sagemaker.processing:Uploaded None to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-26-17-10-55-630/source/sourcedir.tar.gz\n",
+      "INFO:sagemaker.processing:runproc.sh uploaded to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-26-17-10-55-630/source/runproc.sh\n",
       "WARNING:sagemaker.processing:This function has been deprecated and could break pipeline step caching. We recommend using the run() function directly with pipeline sessionsto access step arguments.\n",
-      "INFO:sagemaker.processing:Uploaded None to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-18-11-53-00-090/source/sourcedir.tar.gz\n",
-      "INFO:sagemaker.processing:runproc.sh uploaded to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-18-11-53-00-090/source/runproc.sh\n",
+      "INFO:sagemaker.processing:Uploaded None to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-26-17-10-55-851/source/sourcedir.tar.gz\n",
+      "INFO:sagemaker.processing:runproc.sh uploaded to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-26-17-10-55-851/source/runproc.sh\n",
       "WARNING:sagemaker.processing:This function has been deprecated and could break pipeline step caching. We recommend using the run() function directly with pipeline sessionsto access step arguments.\n",
-      "INFO:sagemaker.processing:Uploaded None to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-18-11-53-00-175/source/sourcedir.tar.gz\n",
-      "INFO:sagemaker.processing:runproc.sh uploaded to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-18-11-53-00-175/source/runproc.sh\n",
+      "INFO:sagemaker.processing:Uploaded None to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-26-17-10-55-937/source/sourcedir.tar.gz\n",
+      "INFO:sagemaker.processing:runproc.sh uploaded to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-26-17-10-55-937/source/runproc.sh\n",
       "WARNING:sagemaker.processing:This function has been deprecated and could break pipeline step caching. We recommend using the run() function directly with pipeline sessionsto access step arguments.\n",
-      "INFO:sagemaker.processing:Uploaded None to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-18-11-53-00-287/source/sourcedir.tar.gz\n",
-      "INFO:sagemaker.processing:runproc.sh uploaded to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-18-11-53-00-287/source/runproc.sh\n",
+      "INFO:sagemaker.processing:Uploaded None to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-26-17-10-56-036/source/sourcedir.tar.gz\n",
+      "INFO:sagemaker.processing:runproc.sh uploaded to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-26-17-10-56-036/source/runproc.sh\n",
       "WARNING:sagemaker.processing:This function has been deprecated and could break pipeline step caching. We recommend using the run() function directly with pipeline sessionsto access step arguments.\n",
-      "INFO:sagemaker.processing:Uploaded None to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-18-11-53-00-413/source/sourcedir.tar.gz\n",
-      "INFO:sagemaker.processing:runproc.sh uploaded to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-18-11-53-00-413/source/runproc.sh\n",
+      "INFO:sagemaker.processing:Uploaded None to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-26-17-10-56-133/source/sourcedir.tar.gz\n",
+      "INFO:sagemaker.processing:runproc.sh uploaded to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-26-17-10-56-133/source/runproc.sh\n",
       "WARNING:sagemaker.processing:This function has been deprecated and could break pipeline step caching. We recommend using the run() function directly with pipeline sessionsto access step arguments.\n",
-      "INFO:sagemaker.processing:Uploaded None to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-18-11-53-00-533/source/sourcedir.tar.gz\n",
-      "INFO:sagemaker.processing:runproc.sh uploaded to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-18-11-53-00-533/source/runproc.sh\n",
+      "INFO:sagemaker.processing:Uploaded None to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-26-17-10-56-261/source/sourcedir.tar.gz\n",
+      "INFO:sagemaker.processing:runproc.sh uploaded to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-26-17-10-56-261/source/runproc.sh\n",
       "WARNING:sagemaker.processing:This function has been deprecated and could break pipeline step caching. We recommend using the run() function directly with pipeline sessionsto access step arguments.\n",
-      "INFO:sagemaker.processing:Uploaded None to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-18-11-53-00-763/source/sourcedir.tar.gz\n",
-      "INFO:sagemaker.processing:runproc.sh uploaded to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-18-11-53-00-763/source/runproc.sh\n",
+      "INFO:sagemaker.processing:Uploaded None to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-26-17-10-56-478/source/sourcedir.tar.gz\n",
+      "INFO:sagemaker.processing:runproc.sh uploaded to s3://iberia-data-lake/customer/simulations/sbx/pipeline/ibdata-customer-simulations-sbx-ppl/fra-2024-11-26-17-10-56-478/source/runproc.sh\n",
+      "WARNING:sagemaker.workflow.utilities:Popping out 'ProcessingJobName' from the pipeline definition by default since it will be overridden at pipeline execution time. Please utilize the PipelineDefinitionConfig to persist this field in the pipeline definition if desired.\n",
+      "WARNING:sagemaker.workflow.utilities:Popping out 'ProcessingJobName' from the pipeline definition by default since it will be overridden at pipeline execution time. Please utilize the PipelineDefinitionConfig to persist this field in the pipeline definition if desired.\n",
+      "WARNING:sagemaker.workflow.utilities:Popping out 'ProcessingJobName' from the pipeline definition by default since it will be overridden at pipeline execution time. Please utilize the PipelineDefinitionConfig to persist this field in the pipeline definition if desired.\n",
+      "WARNING:sagemaker.workflow.utilities:Popping out 'ProcessingJobName' from the pipeline definition by default since it will be overridden at pipeline execution time. Please utilize the PipelineDefinitionConfig to persist this field in the pipeline definition if desired.\n",
+      "WARNING:sagemaker.workflow.utilities:Popping out 'ProcessingJobName' from the pipeline definition by default since it will be overridden at pipeline execution time. Please utilize the PipelineDefinitionConfig to persist this field in the pipeline definition if desired.\n",
+      "WARNING:sagemaker.workflow.utilities:Popping out 'ProcessingJobName' from the pipeline definition by default since it will be overridden at pipeline execution time. Please utilize the PipelineDefinitionConfig to persist this field in the pipeline definition if desired.\n",
       "WARNING:sagemaker.workflow.utilities:Popping out 'ProcessingJobName' from the pipeline definition by default since it will be overridden at pipeline execution time. Please utilize the PipelineDefinitionConfig to persist this field in the pipeline definition if desired.\n",
       "WARNING:sagemaker.workflow.utilities:Popping out 'ProcessingJobName' from the pipeline definition by default since it will be overridden at pipeline execution time. Please utilize the PipelineDefinitionConfig to persist this field in the pipeline definition if desired.\n",
       "WARNING:sagemaker.workflow.utilities:Popping out 'ProcessingJobName' from the pipeline definition by default since it will be overridden at pipeline execution time. Please utilize the PipelineDefinitionConfig to persist this field in the pipeline definition if desired.\n",
@@ -508,12 +494,12 @@
      "data": {
       "text/plain": [
        "{'PipelineArn': 'arn:aws:sagemaker:eu-west-1:077156906314:pipeline/ibdata-customer-simulations-sbx-ppl',\n",
-       " 'ResponseMetadata': {'RequestId': 'b35cd985-e72a-43b0-8b75-55765a76dde7',\n",
+       " 'ResponseMetadata': {'RequestId': 'f92e0bd1-3102-46eb-99c1-550cb5a6e455',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': 'b35cd985-e72a-43b0-8b75-55765a76dde7',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': 'f92e0bd1-3102-46eb-99c1-550cb5a6e455',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '103',\n",
-       "   'date': 'Mon, 18 Nov 2024 11:53:01 GMT'},\n",
+       "   'date': 'Tue, 26 Nov 2024 17:10:57 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
@@ -626,7 +612,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started pipeline for cabin Economy, haul SH, from 2023-01-01 to 2023-11-15 execution date 2024-11-15\n"
+      "Started pipeline for cabin Business, haul LH, from 2023-01-01 to 2023-11-15 execution date 2024-11-26\n"
      ]
     }
    ],
@@ -1328,7 +1314,7 @@
     "vcpuNum": 128
    }
   ],
-  "instance_type": "ml.r5.large",
+  "instance_type": "ml.r5.2xlarge",
   "kernelspec": {
    "display_name": "Python 3 (Data Science 3.0)",
    "language": "python",
